--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "got": "^11.1.4",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
     "nodemon": "^1.19.4",
