--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "chalk": "^4.0.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -28,6 +29,7 @@
     "onoff": "^6.0.0",
     "superstruct": "^0.8.3",
     "valid-env": "^1.0.1",
+    "ws": "^7.3.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/fs-extra": "^8.1.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^14.0.1",
+    "@types/ws": "^7.2.4",
     "@types/yargs": "^15.0.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
