--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^14.0.1",
     "@types/ws": "^7.2.4",
     "@types/yargs": "^15.0.5",
+    "akita-ws": "^0.2.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
